force-app/main/default/objects/LeadDuplicateAcc__c/LeadDuplicateAcc__c.object-meta.xml
<CustomObject>
    <label>Lead Duplicate (Account)</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Duplicates (Account)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>