force-app/main/default/objects/LeadDuplicateAcc__c/fields/AccountNameIT__c.field-meta.xml
<CustomField>
    <fullName>AccountNameIT__c</fullName>
    <label>Account Name from IT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>