force-app/main/default/objects/LeadDuplicateAcc__c/fields/DuplicateAcc__c.field-meta.xml
<CustomField>
    <fullName>DuplicateAcc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lead Duplicates (Account)</relationshipLabel>
    <relationshipName>Lead_Duplicates_Account</relationshipName>
    <type>Lookup</type>
</CustomField>