force-app/main/default/objects/LeadDuplicateAcc__c/fields/JSONBody__c.field-meta.xml
<CustomField>
    <fullName>JSONBody__c</fullName>
    <label>JSON Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>