force-app/main/default/objects/LeadDuplicateAcc__c/fields/MainLead__c.field-meta.xml
<CustomField>
    <fullName>MainLead__c</fullName>
    <label>Main Lead</label>
    <referenceTo>ClientLead__c</referenceTo>
    <relationshipLabel>Lead Duplicates (Account)</relationshipLabel>
    <relationshipName>Lead_Duplicates_Account</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>