force-app/main/default/objects/LeadDuplicateAcc__c/fields/MatchIndex__c.field-meta.xml
<CustomField>
    <fullName>MatchIndex__c</fullName>
    <label>Match Index, %</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>