force-app/main/default/objects/LeadDuplicateAcc__c/recordTypes/Convertion.recordType-meta.xml
<RecordType>
    <fullName>Convertion</fullName>
    <active>true</active>
    <label>Convertion</label>
</RecordType>